sequential_traces_gz = files(
  './ascii_only/automerge-paper.json.gz',
  './ascii_only/clownschool_flat.json.gz',
  './ascii_only/friendsforever_flat.json.gz',
  './ascii_only/json-crdt-blog-post.json.gz',
  './ascii_only/json-crdt-patch.json.gz',
  './ascii_only/rustcode.json.gz',
  './ascii_only/seph-blog1.json.gz',
  './ascii_only/sveltecomponent.json.gz',
  './automerge-paper.json.gz',
  './clownschool_flat.json.gz',
  './friendsforever_flat.json.gz',
  './json-crdt-blog-post.json.gz',
  './json-crdt-patch.json.gz',
  './rustcode.json.gz',
  './seph-blog1.json.gz',
  './sveltecomponent.json.gz',
)
